# JusChat

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements-dev.txt  template.env
.github/workflows/: ci.yml
config/: __init__.py  environment.py
core/: __init__.py  agent.py  base.py  graph.py  manager.py  prompt.py
notebooks/: GR_Embedding_bedrock.ipynb  GR_diffbot.ipynb  GR_generic.ipynb  GR_openai.ipynb  diffbot.ipynb
public/css/: style.css
public/js/: main.js
public/templates/: base.html  index.html
public/templates/components/: tab_chat.html  tab_documents.html
schemas/: __init__.py  agent_schema.py  api_rest.py  api_rest_schema.py  document_schema.py
server/: __init__.py  socketio_manager.py
services/: s3_client.py
tests/: conftest.py  test_api.py
vectordb/: _embedding.py  base.py  qdrant_client.py
vectorstore/: __init__.py  base.py  qdrant_client.py
workers/: __init__.py  connection.py  knowledge.py  tasks.py
