[project]
name = "chat-pdf-graphrag-neo4j-langchain-bedrock"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-aws>=0.2.27",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.27",
    "neo4j>=5.28.1",
    "notebook>=7.4.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]
