[project]
name = "chat-pdf-graphrag-neo4j-langchain-bedrock"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery[sqs]>=5.5.3",
    "langchain>=0.3.26",
    "langchain-aws>=0.2.27",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-neo4j>=0.4.0",
    "neo4j>=5.28.1",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
    "unstructured>=0.18.3",
]

[project.optional-dependencies]
dev = [
  "notebook>=7.4.4",
  "pytest"
]
